<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:onRefresh="@{refreshListener}"
        app:refreshing="@{ViewModel.downloadInProgress}">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/info_msg_missing_wish"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:visibility="@{ViewModel.wish == null ? View.VISIBLE : View.GONE}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                android:paddingVertical="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{ViewModel.wish.text}" />

                <androidx.appcompat.widget.AppCompatImageView
                    imageBitmap="@{ViewModel.qrCode}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:adjustViewBounds="true"
                    android:maxWidth="200dp"
                    android:scaleType="centerInside" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_delete"
                    android:visibility="@{ViewModel.isOwn() ? View.VISIBLE : View.GONE}" />

                <Button
                    android:id="@+id/btnEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_edit"
                    android:visibility="@{ViewModel.isOwn() ? View.VISIBLE : View.GONE}" />

            </LinearLayout>

        </FrameLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <data>

        <import type="android.view.View" />

        <variable
            name="ViewModel"
            type="blagodarie.rating.ui.WishViewModel" />

        <variable
            name="refreshListener"
            type="androidx.swiperefreshlayout.widget.SwipeRefreshLayout.OnRefreshListener" />

    </data>

</layout>