<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_create_account"
            android:visibility="@{ViewModel.account == null ? View.VISIBLE : View.GONE}" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{ViewModel.account != null &amp;&amp; ViewModel.profileInfo != null ? View.VISIBLE : View.GONE}">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/srlRefreshProfileInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:refreshing="@{ViewModel.downloadInProgress}">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingBottom="@dimen/activity_vertical_margin">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Headline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center_horizontal"
                            android:text='@{ViewModel.profileInfo.fullName}' />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivPhoto"
                            imageUrl="@{ViewModel.profileInfo.photo}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="5dp"
                            android:adjustViewBounds="true"
                            android:maxWidth="200dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/account_200dp" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivQRCode"
                            imageBitmap="@{ViewModel.qrCode}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="5dp"
                            android:adjustViewBounds="true"
                            android:maxWidth="200dp"
                            android:scaleType="centerInside" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{String.format(@string/txt_fame, ViewModel.profileInfo.fame)}" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{String.format(@string/txt_own_profile_trust, ViewModel.profileInfo.mistrustCount)}" />

                        <Button
                            android:id="@+id/btnThanksCount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> UserActionListener.onOperationsClick()}"
                            android:text="@{String.format(@string/txt_thanks_count, ViewModel.profileInfo.sumThanksCount)}" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> UserActionListener.onKeysClick()}"
                            android:text="@string/btn_keys" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> UserActionListener.onWishesClick()}"
                            android:text="@string/btn_wishes" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> UserActionListener.onAbilitiesClick()}"
                            android:text="@string/btn_ability" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> UserActionListener.onSocialGraphClick()}"
                            android:text="@string/btn_social_graph" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/txt_thanks_and_thanked_users" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvThanksUsers"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fadeScrollbars="false"
                            android:scrollbars="vertical" />

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="5dp"
            android:textSize="12sp"
            android:text="@{String.format(@string/txt_version, BuildConfig.VERSION_NAME)}" />

    </FrameLayout>

    <data>

        <import type="blagodarie.rating.BuildConfig" />

        <import type="android.view.View" />

        <import type="blagodarie.rating.model.entities.OperationType" />

        <variable
            name="ViewModel"
            type="blagodarie.rating.ui.profile.OwnProfileViewModel" />

        <variable
            name="UserActionListener"
            type="blagodarie.rating.ui.profile.OwnProfileFragment.UserActionListener" />

    </data>

</layout>