<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="@{() -> UserActionListener.onShareProfile()}"
            android:src="@drawable/share_variant"
            app:backgroundTint="@color/colorPrimary"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:fabSize="mini" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srlRefreshProfileInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:refreshing="@{ViewModel.downloadInProgress}">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text='@{ViewModel.lastName + " " + ViewModel.firstName + (ViewModel.middleName.equals("") ? "" : " " + ViewModel.middleName)}' />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivPhoto"
                        imageUrl="@{ViewModel.photo}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="5dp"
                        android:adjustViewBounds="true"
                        android:maxWidth="200dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/account_200dp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivQRCode"
                        imageBitmap="@{ViewModel.qrCode}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="5dp"
                        android:adjustViewBounds="true"
                        android:maxWidth="200dp"
                        android:scaleType="centerInside" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.format(@string/txt_fame, ViewModel.fame)}" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{ViewModel.isOwnProfile || !ViewModel.isHaveAccount ? String.format(@string/txt_self_profile_trust, ViewModel.mistrustCount) : String.format(@string/txt_trust, ViewModel.trustCount, ViewModel.mistrustCount)}" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <Button
                            style="?android:attr/buttonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:background="@{ViewModel.isTrust != null &amp;&amp; ViewModel.isTrust ? @android:color/holo_green_dark : @color/light_gray}"
                            android:enabled="@{ViewModel.isTrust == null || !ViewModel.isTrust}"
                            android:onClick="@{() -> UserActionListener.onAddOperation(OperationType.MISTRUST_CANCEL)}"
                            android:text="@string/btn_trust"
                            android:visibility="@{!ViewModel.isOwnProfile ? View.VISIBLE : View.GONE}" />

                        <Button
                            style="?android:attr/buttonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:background="@{ViewModel.isTrust != null &amp;&amp; !ViewModel.isTrust ? @android:color/holo_red_dark : @color/light_gray}"
                            android:enabled="@{ViewModel.isTrust == null || ViewModel.isTrust}"
                            android:onClick="@{() -> UserActionListener.onAddOperation(OperationType.MISTRUST)}"
                            android:text="@string/btn_mistrust"
                            android:visibility="@{!ViewModel.isOwnProfile ? View.VISIBLE : View.GONE}" />

                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnThanksCount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> UserActionListener.onOperations()}"
                            android:text="@{ViewModel.isOwnProfile || !ViewModel.isHaveAccount ? String.format(@string/txt_self_profile_thanks_count, ViewModel.sumThanksCount) : String.format(@string/txt_thanks_count, ViewModel.sumThanksCount, ViewModel.thanksCount)}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/fabThanks"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constrainedWidth="true"/>

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/fabThanks"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|end"
                            android:onClick="@{() -> UserActionListener.onAddOperation(OperationType.THANKS)}"
                            android:src="@drawable/heart"
                            android:visibility="@{!ViewModel.isOwnProfile() ? View.VISIBLE : View.GONE}"
                            app:backgroundTint="@android:color/white"
                            app:borderWidth="0dp"
                            app:elevation="2dp"
                            app:fabSize="mini"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:maxImageSize="40dp"
                            app:pressedTranslationZ="12dp" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> UserActionListener.onKeys()}"
                        android:text="@string/btn_keys" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> UserActionListener.onWishes()}"
                        android:text="@string/btn_wishes" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> UserActionListener.onAbilities()}"
                        android:text="@string/btn_ability" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> UserActionListener.onSocialGraph()}"
                        android:text="@string/btn_social_graph" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/txt_thanks_users" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvThanksUsers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fadeScrollbars="false"
                        android:scrollbars="vertical" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <data>

        <import type="android.view.View" />

        <import type="blagodarie.rating.ui.user.profile.ProfileViewModel.Mode" />

        <import type="blagodarie.rating.OperationType" />

        <variable
            name="ViewModel"
            type="blagodarie.rating.ui.user.profile.ProfileViewModel" />

        <variable
            name="UserActionListener"
            type="blagodarie.rating.ui.user.profile.ProfileUserActionListener" />

    </data>

</layout>